# Ava

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PROGRESS.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml
docs/: architecture.md
migrations/: README  env.py
scripts/: dev.ps1  test.ps1  verify_sacrificial_browser.py  verify_spoken_browser_voice.py  verify_spoken_windows_voice.py
src/ava/: __init__.py  main.py
src/ava/app/: bootstrap.py  controller.py  state.py
src/ava/automation/: __init__.py  browser.py  executor.py  models.py  sacrificial_browser.py  windows.py
src/ava/config/: __init__.py  paths.py  settings.py
src/ava/flows/: __init__.py
src/ava/intents/: __init__.py  models.py  router.py
src/ava/live/: __init__.py  gemini.py  interfaces.py  prompting.py
src/ava/memory/: __init__.py  bootstrap.py  database.py  journal.py  models.py
src/ava/observation/: __init__.py  engine.py
src/ava/safety/: __init__.py  policy.py
src/ava/telemetry/: __init__.py  logging.py
src/ava/ui/: __init__.py  app_state.py  bridge.py  history_model.py  hotkeys.py  window.py
src/ava/ui/qml/: Main.qml
src/ava/voice/: __init__.py  audio.py  interfaces.py  openwakeword_engine.py  runtime.py  service.py  spoken_normalizer.py  vad.py
tests/: test_browser_controller.py  test_config.py  test_controller.py  test_hotkeys.py  test_intent_router.py  test_journal.py  test_live_client.py  test_live_prompting.py  test_sacrificial_browser.py  test_spoken_normalizer.py  test_voice_runtime.py  test_windows_controller.py
